--- a/index.html
+++ b/index.html
@@ -172,14 +172,15 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
             <div class="box featured" data-aos="zoom-in" data-aos-delay="100">
               <h3>Paket Cheap</h3>
-              <h4><sup>Rp</sup>2.000<span></span></h4>
+              <h4><sup>Rp</sup>6.000<span></span></h4>
               <ul>
-                <li>Ram 1Gb</li>
-                <li>Cpu 50%</li>
-                <li>Disk 1,5Gb</li>
+                <li>Ram 6Gb</li>
+                <li>Cpu 300%</li>
+                <li>Disk 6,5Gb</li>
                 <li>Script Aman 100%</li>
                 <li>Panel Terjaga 100%</li>
-                <li>Garansi 25 Hari 2x Replace</li>
+                <li>Garansi Full 1Bulan</li>
+               <li>Full Replace Sampai Garansi Habis</li>
               </ul>
               <div class="btn-wrap">
                 <a href="https://wa.me/556999326138?text=Kak+Saya+Mau+Beli+Panel+1Gb" class="btn-buy">BUY</a>
@@ -189,14 +190,15 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
             <div class="box featured" data-aos="zoom-in" data-aos-delay="200">
               <h3>Paket Thrift</h3>
-              <h4><sup>Rp</sup>4.000<span></span></h4>
+              <h4><sup>Rp</sup>7.000<span></span></h4>
               <ul>
-                <li>Ram 2Gb</li>
-                <li>Cpu 100%</li>
-                <li>Disk 2,5Gb</li>
+                <li>Ram 7Gb</li>
+                <li>Cpu 400%</li>
+                <li>Disk 7,5Gb</li>
                 <li>Script Aman 100%</li>
                 <li>Panel Terjaga 100%</li>
-                <li>Garansi 25 Hari 2x Replace</li>
+                <li>Garansi Full 1Bulan</li>
+               <li>Full Replace Sampai Garansi Habis</li>
               </ul>
               <div class="btn-wrap">
                 <a href="https://wa.me/556999326138?text=Kak+Saya+Mau+Beli+Panel+2Gb" class="btn-buy">BUY</a>
@@ -206,14 +208,15 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
             <div class="box featured" data-aos="zoom-in" data-aos-delay="300">
               <h3>Paket Moderate</h3>
-              <h4><sup>Rp</sup>6.000<span></span></h4>
+              <h4><sup>Rp</sup>8.000<span></span></h4>
               <ul>
-                <li>Ram 3Gb</li>
-                <li>Cpu 130%</li>
-                <li>Disk 3,5Gb</li>
+                <li>Ram 8Gb</li>
+                <li>Cpu 500%</li>
+                <li>Disk 8,5Gb</li>
                 <li>Script Aman 100%</li>
                 <li>Panel Terjaga 100%</li>
-                <li>Garansi 25 Hari 2x Replace</li>
+                <li>Garansi Full 1Bulan</li>
+               <li>Full Replace Sampai Garansi Habis</li>
               </ul>
               <div class="btn-wrap">
                 <a href="https://wa.me/556999326138?text=Kak+Saya+Mau+Beli+Panel+3Gb" class="btn-buy">BUY</a>
@@ -223,14 +226,15 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
             <div class="box featured" data-aos="zoom-in" data-aos-delay="400">
               <h3>Paket High</h3>
-              <h4><sup>Rp</sup>8.000<span></span></h4>
+              <h4><sup>Rp</sup>9.000<span></span></h4>
               <ul>
-                <li>Ram 5Gb</li>
-                <li>Cpu 250%</li>
-                <li>Disk 5,5Gb</li>
+                <li>Ram 9Gb</li>
+                <li>Cpu 600%</li>
+                <li>Disk 9,5Gb</li>
                 <li>Script Aman 100%</li>
                 <li>Panel Terjaga 100%</li>
-                <li>Garansi 25 Hari 2x Replace</li>
+                <li>Garansi Full 1Bulan</li>
+               <li>Full Replace Sampai Garansi Habis</li>
               </ul>
               <div class="btn-wrap">
                 <a href="https://wa.me/556999326138?text=Kak+Saya+Mau+Beli+Panel+5Gb" class="btn-buy">BUY</a>
@@ -248,7 +252,8 @@
                 <li>Disk Unlimited</li>
                 <li>Script Aman 100%</li>
                 <li>Panel Terjaga 100%</li>
-                <li>Garansi 25 Hari 2x Replace</li>
+                <li>Garansi Full 1Bulan</li>
+               <li>Full Replace Sampai Garansi Habis</li>
               </ul>
               <div class="btn-wrap">
                 <a href="https://wa.me/556999326138?text=Kak+Saya+Mau+Beli+Panel+Unli" class="btn-buy">BUY</a>
