--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
             <div class="box featured" data-aos="zoom-in" data-aos-delay="500">
               <h3>Reseller Panel Public</h3>
-              <h4><sup>Rp</sup>12.000<span></span></h4>
+              <h4><sup>Rp</sup>10.000<span></span></h4>
               <ul>
                 <li>Bebas Create Panel</li>
                 <li>Bebas Jualan Panel</li>
@@ -279,7 +279,7 @@
             <div class="box featured" data-aos="zoom-in" data-aos-delay="500">
               <span class="advanced">Recommend</span>
               <h3>Reseller Panel Private</h3>
-              <h4><sup>Rp</sup>15.000<span></span></h4>
+              <h4><sup>Rp</sup>12.000<span></span></h4>
               <ul>
                 <li>Bebas Create Panel</li>
                 <li>Bebas Jualan Panel</li>
@@ -296,7 +296,7 @@
             <div class="box featured" data-aos="zoom-in" data-aos-delay="500">
               <span class="advanced">Recommend</span>
               <h3>Admin Panel Pterodactyl</h3>
-              <h4><sup>Rp</sup>20.000<span></span></h4>
+              <h4><sup>Rp</sup>15.000<span></span></h4>
               <ul>
                 <li>Bebas Create Panel</li>
                 <li>Bebas Jualan Panel</li>
@@ -361,7 +361,7 @@
               <ul>
               	<li>Free Update</li>
                   <li>Free Panel Unlimited</li>
-                  <li>Free Req 2 Fitur</li>
+                  <li>Fitur Menarik & Anti Error</li>
                   <li>Script No Enc 100%</li>
                   <li>Free Req Password Script</li>
                   </ul>
